syncdoc/tests/roundtrip/snapshots/formats_difftastic/roundtrip__helpers__restored_lib.rs.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
pub mod formats;
pub mod formats {
    pub mod difftastic;
}
